//package wanyou.game.protocol;
//删除任务

message BseDelTask
{
   required int32 taskID = 1 ;  //任务ID
}
